
 * src/search.c:
   Fix search_find_text not returning -1 when match is out of range.
   This fixes invalid memory reads and wrong template filename
   wildcard replacement.
 * src/search.c, src/document.c:
   Only replace template filename matching start of word on saving.
 * plugins/filebrowser.c:
   Add 'Refresh' popup menu item (part of geany-plugins #2999858).


2010-05-10  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/dialogs.c:
   Fix Cancel on Goto Line dialog (patch by Dimitar Zhekov, thanks).
 * src/dialogs.c, src/win32.c, src/win32.h:
   (Re-)Implement a (still basic) native Windows Save As dialog when
   compiled with GEANY_USE_WIN32_DIALOG.


2010-05-09  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * THANKS, src/about.c, plugins/classbuilder.c:
   Add support for creating PHP classes (patch by Ondrej Donek, thanks).
 * src/ui_utils.h, src/ui_utils.c:
   Add public, generic callback ui_editable_insert_text_callback()
   to restrict GtkEntry text inputs to +/- and numeric values only.
 * src/dialogs.h, src/dialogs.c:
   Add special variant dialogs_show_input_goto_line() to use a normal
   GtkEntry together with dialogs_show_input_goto_line() for text input.
 * src/geanyentryaction.c, src/callbacks.c, src/editor.c, src/editor.h:
   Allow '+<number' and '-<number>' as values for Goto Line inputs
   to jump relative to the current line (closes #2997238).


2010-05-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/highlighting.c:
   Apply foreground and background colours of the folding margin
   style properly (closes #2998347).
 * src/utils.c:
   Don't auto-close short XML tags (closes #2994852).
 * THANKS, src/about.c, src/keybindings.c:
   Improve jumping to matching braces by consistently position the
   cursor before or after the matching brace dependent where it
   was before (patch by Dimitar Zhekov, thanks).
 * src/main.c:
   Fix crash when generating global tags files (patch by Colomban
   Wendling, thanks).

